[package]
name = "simple-vmm"
version = "0.1.0"
publish = false
authors = ["Geoffroy Couprie <geoffroy.couprie@clever-cloud.com>"]
edition = "2018"
build = "build.rs"

[dependencies]
kvm-bindings = { version = "0.2", features = [ "fam-wrappers" ] }
kvm-ioctls = "0.4"
vm-memory = { version = ">=0.1", features = [ "backend-mmap" ] }

[build-dependencies]
cc = "^1.0.15"
